--- a/section_Bias_Variance_Generalization_and__.tex
+++ b/section_Bias_Variance_Generalization_and__.tex
@@ -6,10 +6,9 @@
  
  In the generalization error, the loss function plays an important part in determining how \textit{good} the model's prediction and quantifying these errors. Given a training set $\mathrm{T} = (X,Y)$, let $\hat{f}(X)$ be the model's predictive function for the features and denote $L( Y,\hat{f(X)} )$ the loss function acting on the data. 
  
- These functions are defined as a measure of how strong classifiers are with respect to their predictions. They are based on comparing target predictions $\hat{y}$ versus real target values $y$ for each sample or for a group of them. They have their origins in \textit{Type I \& type II} errors common in statistics but have different meanings in this context. 
- 
-Loss functions are considered to be semimetrics one the target space i.e. a function that is symmetric, non-negative and equal to zero only if both arguments are equal.
- 
+By comparing target predictions versus their real values for each sample, loss functions are defined as a measure of how strong classifiers are with respect to their predictions. They behave as semimetrics on the target space i.e. functions that are symmetric, non-negative and equal to zero only if both arguments are equal.
+
+In the context of supervised classification they are also called \textit{metrics} and they origin from \textit{Type I \& type II} errors common in statistics but have different meanings in this context.  There are a number of different variations of metrics where different problem settings might require different more suitable metrics to be used.
  
  \begin{definition}{Generalization Error}
  	The generalization error is also known as the prediction error. Given that any model is always built on the data, this value is the model's expected error over an independent training set $\mathrm{Ts}$:
