--- a/section_Boosting_Models_label_section__2.tex
+++ b/section_Boosting_Models_label_section__2.tex
@@ -48,10 +48,7 @@ This will yield a similar equation as in \ref{equation-adaBoostIteration}, but o
 Given that we are only minimizing over $\gamma$ and $\theta$, we can group $e^{-y_i  \hat{y}^{m}(x_i)}$ into a single value $w_i^{(m)}$ which we will call the weight of each sample, which depends strongly on past steps of the algorithm. We can also take the $\gamma$ factor out of the sum, since it is fixed for all samples. The equation now becomes
 
 \begin{equation} \label{equation-adaBoostExponentialIteration2}
-\begin{split}
-(\gamma_{m}, \theta_{m}) = \underset{\gamma, \theta}{\mathrm{argmin}}  \sum_{i=1}^{N} &  w_i^{(m)} exp \big(- \gamma h(x_i,\theta)y_i \big) \\
- \underset{\gamma, \theta}{\mathrm{argmin}} \  exp(\gamma) \sum_{i=1}^{N} & w_i^{(m)} exp \big( - h(x_i,\theta)y_i \big) \\
-\end{split}
+(\gamma_{m}, \theta_{m}) = \underset{\gamma, \theta}{\mathrm{argmin}}  \sum_{i=1}^{N}  w_i^{(m)} exp \big(- \gamma h(x_i,\theta)y_i \big) 
 \end{equation}
 
 We can then minimize for $\theta$ first, independently of the value of $\gamma$. The series in \ref{equation-adaBoostExponentialIteration2} can be decomposed 
