--- a/section_Meta_Section_Writing_plan__.tex
+++ b/section_Meta_Section_Writing_plan__.tex
@@ -1,3 +1,7 @@
 \section{Meta Section: Writing plan for this Chapter}
 \textbf{Primero},Ir llevando todo con un ejemplo sobre un dataset de llamados y con un logistic classifier.
 
+\section{Preamble}\label{section-preamble}
+
+In a braod sense, most of the discussion in this chapter is based on information extracted from two very known books in the literature: \ref{bishop - patternRecognition} and  \ref{hastie-elemstatslearn}. In some specific parts, we also used concepts or information from \label{scikit-learn} . Some other specific texts have been used but, where specified, they have been correctly cited.
+Where not specified, the reader can assume that the proof is based from said texts.
