--- a/section_Classifier_Decision_Tree_Learners__.tex
+++ b/section_Classifier_Decision_Tree_Learners__.tex
@@ -8,7 +8,7 @@ For numerical features, $U$ will be of the form $(-\infty,c]$ where $c \in \math
 
 The learner can be characterized by 
 \[
-h(X) = \sum_{j=1}^J c_k I(X \in A_k)
+h(X) = \sum_{k=1}^K c_k I(X \in A_k)
 \]\label{equation-decisionTreeModel}
 
 where $c_k$ is the value that our model estimates forfor samples in the $A_k$ region. Both of these will have to be estimated by the model by minimizing its loss funciton.
