--- a/trash.tex
+++ b/trash.tex
@@ -120,108 +120,33 @@
 %\end{definition}
 \end{abstract} 
 
-\section{Bonus Track: Brief Technical Notes on Machine Learning Applications}\label{section-technicalObservations}
+\section{ Brief ovierview to machine learning and supervised classification problems}\label{section-introduction}
 
-These notes do not intend to be a complete reference manual of technical computer resources available for data analysis and machine learning algorithms. Rather it intends to be a starting point for other people, notably university science students, that would like to get started in some \textit{fast} way with a working environment and do not have an advanced technical computer skill. It is certainly built from our experience and we think it might be found helpful for other people that intend to start on a similar path
+Machine learning is a subfield of computer science with broad \textit{theoeretical} intersections with statistics and mathematical optimization. At present time it has a wide range of applications. A non-exhausitve list of its use includes self-driving cars, spam detection systems, face and/or voice recognition, temperature prediction in weather, AI opponents in games, disease prediction in patients, text and audio language translation, stock pricing, movie recommendation systems, etc. Examples of these machine learning programs are now widespread to the point where their use today has direct impact on the lives of millions of people. Due to this, machine learning has \textit{practical} intersections with data and software engineering.
 
-Part of the solution will be to get a minimum understanding of how computer systems work and how to initialize the tools we'll be using. This becomes obvious when we realize that our tools are computers and data. A Machine Learning application will then become a \textit{program} which is a set of instructions given to a computer, in order to complete a certain task.
+The most widely used definition of machine learning is attributed to Tom Mitchell: 	 
+"A computer program is said to learn from experience E with respect to some class of tasks T and performance measure P if its performance at tasks in T, as measured by P, improves with experience E" \cite{Mitchell-MLearning}. To our purpose it is clear though that this definition \footnote{Other authors might reference machine learning as \textit{statistical learning}. See \cite{hastie-elemstatslearn} as an example.} is not formally well-defined. However it serves to convey the idea of algorithms that automatically \textit{learn} to do a a specific task better over time and with more data. Note that the "goodness" of their performance is inherently subjected to the evaluation criteria chosen for the task. Because of this,\textit{learning} is less associated with a cognitive definition in this context and more to a performance based approach.
 
-Having a minimum notion of how computers work will effectively let us start in a solution a solution. Not only because it will be our tool for this
-but also because we can achieve faster results in the execution. In our case, taking advantage of multiprocessing gave us time advantages of orders of magnitude. 
+Machine Learning is divided into two main categories: Supervised and Unsupervised Learning. Let $Y \in \mathbb{R}^n$ be the outputs of the model and $X \in \mathbb{R}^{n \times  p}$ be the inputs: for supervised learning algorithms are set to produce outputs from input data i.e. for each instance $n$, the computer has access to examples of outputs and tries to reproduce them based on information contained in $X$. In this context, the algorithm is generally referred to as a \textit{learner}.
 
-Certainly there are lots of specific terms that one will start to pick up when using computers. Examples include IPs, servers, ssh connections, clusters, operating systems, terminal multiplexers, package dependencies, repositories, file version control, etc. Not all of them are necessary to start off and this is more notable in small problems, but when the data grows in volume and frequency, it become harder to cope with the necessary
+The second class of problems is where the output $Y$ is missing altogether from the data. In this scenario the most common objectives are clustering samples, density estimation and data compression. Linear regression and K-means clustering are examples of algorithms in each of these categories respectively.
 
-These notes also intend to point to some good (from our experience ) online resources to get started with analyzing, processing and wrangling data. Most of the time used in a solution of this sort will be spent in cleaning, transforming or managing a set of data. And we have found that there are a number of websites, books and online communities that can be a very good starting point for this aspect.
+In supervised learning tasks can be sub-categorized by the nature of the problem. When the type of the output variable $Y$ takes a (generally \textit{small} )discrete set of values then it is said that it is a supervised \textit{classification} problem. On the other hand, when the output takes continuous (or dense in an open set of $\mathbb{R}$) range of \textit{quantitative} values, the problem is said to be of supervised \textit{regression}. Note that regression problems can be encoded into classification problems by grouping the output values into categories by taking ranges of output values. 
 
+Suppose our objective is to predict $y$ given a new sample $x$. In supervised regression problems, $y$ will comprise a continuous variable. for classification problems on the other hand, $y$ will represent a label for a certain class. For the case of $K$ classes, $y$ most commonly takes values in the ranges $0$ through $K-1$  or $1$ through $K$. In both cases, the joint probability distribution $p(X, Y)$, called the \textit{true} distribution, gives all of the information we need on these two variables. However the values of this probability is most often unknown. The idea is to then user estimations and inference on the most likely values for new samples and take decisions with the information at hand. These decisions will be based on the most probabilistic characterization of the data we have. In this work we will focus on the classification aspect of machine learning.
 
+In these type of problems the theoretical and the computational aspects are both of interest. The algorithms used need to consider the technical requirements of the software and hardware at hand, as well as the time or resource constrains imposed by the problem setting. As such, they are expected to be executed in a reasonable amount of time, imposed by the task specification, and limited by the computing power available. \footnote{Here the word \textit{reasonable} is used in a broad sense. It will depend entirely on time constraints, computational capacity, usage and other aspects of each learning application.} There can be  problems which require that the algorithm output predictions in \textit{real-time}, to the resolution of milliseconds. Picture a system where a credit-card transaction needs to be approved or labeled as fraud. Here the system needs to respond in short time if the transaction is fraudulent. 
 
-
-Linux, Ubuntu, git, github, man pages
-
-
-The terminal
+Other use cases might require the system to process a big volume of data at once, not a single event, but a batch of these and output this answer. The system in use needs to be prepared to run \textit{lean} with a big inflow of data, without overloading the hardware capacity.  These examples show that for a given problem, multiple algorithms are available to use but while all of them are theoretically doing the same task, we must also consider the practical advantages of these. Computational efficiency and \textit{scalability} are relevant when working with these problems. Even though we won't delve into these aspects in this work, it has an important consideration in the application of Machine Learning solutions.
 
 
+In its essence, a machine learning method is a probabilistic model built from data so it is very similar to a statistical model. However, it differs specially in that its focus is generally on the models' predictive abilities more than in the model's parameters estimates.\cite{breiman-statisticalmodeling} The algorithms will be built and used to try and replicate as best as possible a given phenomena, without really identifying the true nature of the mechanisms behind this phenomena. As such, most applications will try to \textit{imitate} the task's behavior rather than try to identify the real system behind it.
+%on this matter It also puts a great amount of weight on efficiency and computational scalability. 
 
-LIBRO WES MACKINNEY \cite{McKinney-pandas}
+%At this point it is important to start noting
 
-sklearn docs for machine learning \cite{scikit-learn}
-
-
-Data storage: easiest data format is in `csv` (comma separated values) which is a universal, very general and straight-forward format for data storage. Very few previous knowledge is needed to read this format. The downside is that it's also very inefficient. Even when compressed, it can be orders of magnitude bigger and slower to read than other formats.
-
-Specific data storage types and database engines exist to cope with this problem. Storing and reding data will be quicker but significant overhead can be added to the project itself since building and mantaining is a more complex, though not very difficult, task. The same applies for the person trying to read the data. Most databases allow querying of the data in an SQL-type query which is a specific language synthaxed to express relational algebra operations. Examples of this type might include MySQL\footnote{ Oracle Coproration, \url{http://dev.mysql.com/doc/refman/5.7/en/}} , PostgresSQL \footnote{ PostgreSQL Global Development Group, \url{https://www.postgresql.org/}} or MongoDB \footnote{ MongoDB Inc., \url{https://www.mongodb.com/}}.
-
-2TB of csv.gz data split in 24 month daily call records
-
-Recommended websites:
-
-\url{stackoverflow.com}
-
-\url{https://www.kaggle.com/} 
-
-\url{http://austinrochford.com/posts.html}
-
-\url{http://stats.stackexchange.com/}
-
-Python as a general programming language. Mostly for scripting, data preprocessing and data visualization. 
-
-Working with Python provides a direct integration to a very wide array of software solutions. Its community is very active and has ready-to-use applications in a variety of problems. This will allow us to work with tools which are both flexible and/or powerful. Ranging from graph visualization to computer cluster connections or parallelization of implementations of machine learning algorithms.
-
-In our experience, this language is the most complete and it has a very high-level interperetation of its synthax. This becomes a gradual learning curve for anyone directly
-
-jupyter notebooks
-Flexible and powerful for research, collaboration and 
-\url{https://github.com/jdemonasterio/authorea/blob/master/Notebooks/small_tests.ipynb}
-
-A good starting point for a working python workframe would be to use anaconda 
-\url{https://docs.continuum.io/}
-And for an on-point working tutorial (any working environment)
-\url{http://opentechschool.github.io/python-data-intro/core/notebook.html}
-
-
-
-Online courses:
-\url{https://www.coursera.org/specializations/data-science-python}
-\url{https://www.edx.org/course/introduction-python-data-science-microsoft-dat208x-3} 
-
-
-
-
-Recommended modules:
-
-Numpy for linear algebra operations, routines and data structures.
-scipy for stats.
-Pandas for data loading, data processing, data wrangling, data management, relational algebra  operations (joins, group bys, aggregations, apply a function to each cell value), data transformation. 
-
-Mostly in dataframe format which is a matrix where columns need not be of the same data type i.e. string vs. numerical vs. dictionary, etc.
-
-Sframes for resilient disk-distributed dataframes where more data can be processed than by the limit which the computer supports. Prepared to load huge data files of various formats. Uses its own disk data format which allows to load and save data with near real-time speed, when compared to files which are plain comma-separated values.
-
-Hashing trick to split the data.
-
-
-lti-processing libraries.
-
-xgboost
-
-Theano for neural network algorithms mostly.
-
-
-Python, sklearn, pandas, graphlab, etc
-python, jupyter, sklearn, pandas, sframes, graphlab, spark mllib, theano, tensor flow, xgboost
-
-Data process raw data by reading in chunks from huge files (compressed filesizes amount to 1TB), applying filters like modulus 10.
-
-Dealing with the computational issues of algorithms and data processing. When computed, algorithms need to take into account things such as such as memory and/or disk size, parallelization, multi-core, linear algebra routines.
-
-In general, algorithms will load all data in RAM and execute optimization routines. 
-
-For example if $K$Folds is used, in most cases we will be running multiple  learning routines simultaneously in each fold group and keep the "best" scores at the end.
-
-Joblib, sklearn and Graphlab are all Python modules
-
-
+These subtle differences in the way machine learning approaches a problem is also reflected in the terminology used by the field. Here most terms have equivalent or similar notations to those used in classic statistics. As a start, the \textit{dependent} $Y$ is called the target or label and the \textit{independent} variables, \textit{covariates} or \textit{input variables} are named \textit{features} in this case. 
+%Labels that are representing categorical or discrete variables are also named factors or \textit{qualitative} variables. 
 
 \end{document}
 
