--- a/section_Meta_Section_Writing_plan__.tex
+++ b/section_Meta_Section_Writing_plan__.tex
@@ -1,7 +1,4 @@
 \section{Meta Section: Writing plan for this Chapter}
 
 \section{Preamble}\label{section-preamble}
-Most of the discussions in this chapter are based on information extracted from two distinguished textbooks: \ref{bishop - patternRecognition} and  \ref{hastie-elemstatslearn}. Some fundamental concepts and material were also extracted from [scikit-learn] . While other texts were also used, it is not necessary that we point them out here as they have been correctly cited. Where not specified, the reader can assume that the proof is based from said texts.
-
-In a braod sense, most of the discussion in this chapter is based on information extracted from two very known books in the literature:  In some specific parts, we also used concepts or information from \label{scikit-learn} . Some other specific texts have been used but, where specified, they have been correctly cited.
-Where not specified, the reader can assume that the proof is based from said texts.
+Most of the discussions in this chapter are based on information extracted from two distinguished textbooks: \ref{bishop - patternRecognition} and  \ref{hastie-elemstatslearn}. Some fundamental concepts and material were also used from \label{scikit-learn}. While other texts were also used, it is not necessary that we point them out here as they have been correctly cited. Where not specified, the reader can assume that the proof is based from said texts.
